feat: add progress-bar component (#8720)
* feat: add new progress-bar component

* feat(progress-bar): add support for indeterminate variant

* docs(progress-bar): provide two stories and playground

* refactor(progress-bar): use div markup with aria attributes

* docs(progress-bar): add example

* test(progress-bar): add tests

Co-authored-by: Scott Strubberg <sstrubberg@protonmail.com>

--- a/packages/components/src/globals/scss/styles.scss
+++ b/packages/components/src/globals/scss/styles.scss
@@ -143,6 +143,7 @@ $deprecations--message: 'Deprecated code was found, this code will be removed be
 @import '../../components/overflow-menu/overflow-menu';
 @import '../../components/pagination-nav/pagination-nav';
 @import '../../components/pagination/pagination';
+@import '../../components/progress-bar/progress-bar';
 @import '../../components/progress-indicator/progress-indicator';
 @import '../../components/radio-button/radio-button';
 @import '../../components/search/search';
