feat(CodeSnippet): add CodeSnippet, CopyButton to @carbon/styles (#8843)
* feat(Button): add button styles to @carbon/styles

* feat(Checkbox): add  checkbox and form to @carbon/styles

* feat(Button): add button styles to @carbon/styles

* feat(Checkbox): add  checkbox and form to @carbon/styles

* feat(CodeSnippet): add in CodeSnippet, CopyButton styles

* test(CodeSnippet): add styles tests for CodeSnippet, CopyButton

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/code-snippet/_index.scss
+++ b/packages/styles/scss/components/code-snippet/_index.scss
@@ -5,11 +5,7 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@use 'accordion';
-@use 'button';
-@use 'breadcrumb';
-@use 'checkbox';
+@forward 'code-snippet';
 @use 'code-snippet';
-@use 'link';
-@use 'list';
-@use 'loading';
+
+@include code-snippet.code-snippet;
