--- a/packages/styles/scss/utilities/_tooltip.scss
+++ b/packages/styles/scss/utilities/_tooltip.scss
@@ -8,7 +8,7 @@
 @use 'box-shadow' as *;
 @use 'convert' as *;
 @use 'focus-outline' as *;
-@use 'z-index';
+@use 'z-index' as *;
 @use '../config' as *;
 @use '../motion' as *;
 @use '../theme' as *;
