fix(radio-button): add reset to radio button group (#8887)
Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>

--- a/packages/components/src/components/radio-button/_radio-button.scss
+++ b/packages/components/src/components/radio-button/_radio-button.scss
@@ -21,6 +21,8 @@
 /// @group radio-button
 @mixin radio-button {
   .#{$prefix}--radio-button-group {
+    @include reset;
+
     display: flex;
     align-items: center;
   }
