feat(data-table): add data-table to sass modules style package (#8844)
* feat(data-table): add data-table to sass modules style package

* fix(datatable): apply review feedback, reorganize feature modules

* fix(datatable): properly namespace feature modules, update/add tests

* fix(datatable): ensure feature modules are included in main bundle

* chore: remove unrelated changes

* chore: remove unrelated change

* chore(datatable): remove unused theme variables

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -13,3 +13,8 @@
 @use 'link';
 @use 'list';
 @use 'loading';
+@use 'data-table';
+@use 'data-table/action';
+@use 'data-table/expandable';
+@use 'data-table/skeleton';
+@use 'data-table/sort';
