fix(overflow-menu): add reset to button (#8889)
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/overflow-menu/_overflow-menu.scss
+++ b/packages/components/src/components/overflow-menu/_overflow-menu.scss
@@ -241,6 +241,7 @@
   }
 
   .#{$prefix}--overflow-menu-options__btn {
+    @include reset;
     @include type-style('body-short-01');
     @include focus-outline('reset');
 
