feat(menu): add Menu to @carbon/styles (#8922)
Co-authored-by: Scott Strubberg <sstrubberg@protonmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -13,6 +13,7 @@
 @use 'link';
 @use 'list';
 @use 'loading';
+@use 'menu';
 @use 'data-table';
 @use 'data-table/action';
 @use 'data-table/expandable';
