chore(project): update chalk and stylelint dependencies (#8956)
* chore(project): update chalk to 4.x

* chore(project): update stylelint to latest versions

--- a/packages/components/src/globals/scss/_typography.scss
+++ b/packages/components/src/globals/scss/_typography.scss
@@ -47,7 +47,9 @@ $base-font-size: 16px !default;
 }
 
 // 🔬 Experimental
+// stylelint-disable-next-line no-invalid-position-at-import-rule
 @import '../../globals/scss/vendor/@carbon/elements/scss/type/font-family';
+// stylelint-disable-next-line no-invalid-position-at-import-rule
 @import '../../globals/scss/vendor/@carbon/elements/scss/type/styles';
 
 /// Different type styles per token
