fix(tile): add reset to tile group (#8888)
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -18,6 +18,10 @@
 /// @access private
 /// @group tile
 @mixin tile {
+  .#{$prefix}--tile-group {
+    @include reset;
+  }
+
   .#{$prefix}--tile {
     position: relative;
     display: block;
