--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -14,6 +14,7 @@
 @use 'list';
 @use 'loading';
 @use 'menu';
+@use 'modal';
 @use 'data-table';
 @use 'data-table/action';
 @use 'data-table/expandable';
