feat(styles): add component token support for Sass Migration effort (#8971)
* chore: check-in work

* feat(themes): add support for component tokens in theme

* feat(styles): export tokens from notification

* chore(styles): remove unused files

* chore(styles): remove unused config option

* chore(styles): switch prefix back to bx

--- a/packages/themes/scss/modules/_theme.scss
+++ b/packages/themes/scss/modules/_theme.scss
@@ -14,12 +14,18 @@ $-custom-property-prefix: 'cds';
 
 /// @access public
 /// @group @carbon/themes
-@mixin theme($active-theme: $theme) {
+@mixin theme($active-theme: $theme, $component-tokens...) {
   $parent-theme: $theme;
   $theme: $active-theme !global;
 
   @each $token, $value in $theme {
     @include -custom-property($token, $value);
+  }
+
+  @each $group in $component-tokens {
+    @each $token, $value in $group {
+      @include -custom-property($token, $value);
+    }
   }
 
   @content;
