feat(ContentSwitcher): add ContentSwitcher to @carbon/styles (#8862)
* feat(Button): add button styles to @carbon/styles

* feat(Checkbox): add  checkbox and form to @carbon/styles

* feat(Button): add button styles to @carbon/styles

* feat(Checkbox): add  checkbox and form to @carbon/styles

* test(CodeSnippet): add styles tests for CodeSnippet, CopyButton

* style(Storybook): sync base styles with current storybook

* feat(Button): add button styles to @carbon/styles

* feat(Checkbox): add  checkbox and form to @carbon/styles

* feat(ContentSwitcher): add ContentSwitcher to @carbon/styles

* test(ContentSwitcher): add style test for ContentSwitcher

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -10,6 +10,7 @@
 @use 'breadcrumb';
 @use 'checkbox';
 @use 'code-snippet';
+@use 'content-switcher';
 @use 'date-picker';
 @use 'file-uploader';
 @use 'link';
