feat(structured-list): sass module refactor (#8931)
* feat(structured-list): scaffolding out

* style(structured-list): added in the style

* style(structured-list): refactor

* style(structured-list): zombies

* fix(structured-list): added all neccessary components to load storybook

* fix(structured-list): yarn format

* style(structure-list): commenting out theme-tokens

* fix(structured-list): gutted the overlapping files

* fix(structured-list): feature-flags dupe

* fix(structured-list): removed glut

* fix(structured-list): removed theme-tokens

* fix(structured-list): yarn format

* style(structured-list): motion fixes

* fix(structured-list): removed old skeleton

* fix(structure-list): yarn format

* Update packages/styles/scss/components/structured-list/_structured-list.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -23,5 +23,6 @@
 @use 'data-table/expandable';
 @use 'data-table/skeleton';
 @use 'data-table/sort';
+@use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
