fix(sass): update styles for number input and overflow (#9010)
* fix(sass): update styles for number input and overflow

* Update _overflow-menu.scss

Co-authored-by: Scott Strubberg <sstrubberg@protonmail.com>

--- a/packages/styles/scss/components/overflow-menu/_overflow-menu.scss
+++ b/packages/styles/scss/components/overflow-menu/_overflow-menu.scss
@@ -253,6 +253,7 @@
     background-color: transparent;
     color: $text-02;
     cursor: pointer;
+    font-family: inherit;
     font-weight: 400;
     text-align: left;
     transition: outline $duration-fast-02 motion(entrance, productive),
