--- a/packages/styles/scss/components/number-input/_number-input.scss
+++ b/packages/styles/scss/components/number-input/_number-input.scss
@@ -49,7 +49,7 @@
     background-color: $field;
     border-radius: 0;
     color: $text-primary;
-    font-family: carbon--font-family('mono');
+    font-family: font-family('mono');
     font-weight: 300;
     transition: background-color $duration-fast-01 motion(standard, productive),
       outline $duration-fast-01 motion(standard, productive);
