--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -23,6 +23,7 @@
 @use 'data-table/expandable';
 @use 'data-table/skeleton';
 @use 'data-table/sort';
+@use "text-input";
 @use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
