--- a/packages/components/src/components/structured-list/_structured-list.scss
+++ b/packages/components/src/components/structured-list/_structured-list.scss
@@ -150,7 +150,7 @@
     position: relative;
     display: table-cell;
     max-width: 36rem;
-    color: $text-secondary;
+    color: $text-primary;
     @if feature-flag-enabled('enable-v11-release') {
       border-top: 1px solid $border-subtle;
     }
