feat(search): sass module refactor (#8967)
* feat(Search): change imports to sass modules

* feat(Search): update index.scss

* feat(Search): add Search storys to carbon-react

* fix(Search): add convert import, fix import order

* fix(PlaceholderColors): remove duplicate import

* fix(Search): remove default value from expandable search

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -19,6 +19,7 @@
 @use 'menu';
 @use 'radio-button';
 @use 'modal';
+@use 'search';
 @use 'data-table';
 @use 'data-table/action';
 @use 'data-table/expandable';
