fix(tile): add link color contrast (#9025)
* fix(tile): add link color contrast

* Update packages/components/src/components/tile/_tile.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -52,6 +52,9 @@
       background: $layer-hover;
     }
   }
+  .#{$prefix}--tile--expandable .#{$prefix}--link {
+    color: $link-secondary;
+  }
 
   .#{$prefix}--tile--clickable,
   .#{$prefix}--tile--expandable {
