feat(themes): add values for v11 tokens (#8994)
* feat(themes): add values for v11 themes

* feat(themes): add scss conversion for token format

* feat(themes): update entrypoint and adjust g100 tokens

* docs(themes): add v11 preview example

* chore(themes): format example files

* chore(themes): rename color to text and rename v11 to all

* chore(themes): update example reset button

* fix(themes): update v11 token values

* fix(themes): update token values with hover colors

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/themes/examples/sass-modules/src/styles.scss
+++ b/packages/themes/examples/sass-modules/src/styles.scss
@@ -13,11 +13,16 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
-html, body, #__next, .container {
+html,
+body,
+#__next,
+.container {
   width: 100%;
   height: 100%;
 }
