feat(TextArea): refactor TextArea to sass modules (#9037)

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -26,7 +26,8 @@
 @use 'data-table/expandable';
 @use 'data-table/skeleton';
 @use 'data-table/sort';
-@use "text-input";
+@use 'text-area';
+@use 'text-input';
 @use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
