feat(InlineLoading): refactor InlineLoading to sass module (#9030)
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -13,6 +13,7 @@
 @use 'content-switcher';
 @use 'date-picker';
 @use 'file-uploader';
+@use 'inline-loading';
 @use 'link';
 @use 'list';
 @use 'loading';
