8905 notification refactor inline toast (#9004)
* wip-testing

* feat(notifications): figure out tests and add storybook

* feat(notification): refactor for toast and inline

* update feature-flag enabled

* Update packages/styles/scss/components/notification/_toast-notification.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* update: remove knobs

* Update packages/styles/scss/components/notification/_toast-notification.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* feat(notification): remove unnecessary props

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -21,6 +21,7 @@
 @use 'tooltip';
 @use 'radio-button';
 @use 'modal';
+@use 'notification';
 @use 'search';
 @use 'data-table';
 @use 'data-table/action';
