--- a/packages/styles/scss/components/notification/_index.scss
+++ b/packages/styles/scss/components/notification/_index.scss
@@ -5,4 +5,12 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'tokens';
+@forward './tokens';
+@forward 'inline-notification';
+@forward 'toast-notification';
+
+@use 'inline-notification';
+@use 'toast-notification';
+
+@include inline-notification.inline-notification;
+@include toast-notification.toast-notification;
