feat(ProgressIndicator): add @carbon/styles (#9022)
* feat(progress-indicator): initial @carbon/styles

* chore: fix styles and add stories

* fix: grid story style

* chore(storybook): remove actions, knobs

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/src/components/Grid/Grid.stories.scss
+++ b/packages/carbon-react/src/components/Grid/Grid.stories.scss
@@ -8,10 +8,6 @@ p {
   margin-top: $spacing-05;
 }
 
-p:first-of-type {
-  margin-top: 0;
-}
-
 // Grid modes
 .bx--css-grid {
   background-color: $blue-20;
@@ -20,6 +16,11 @@ p:first-of-type {
 
 .bx--css-grid p {
   @include type-style('code-02');
+}
+
+p:first-of-type:not(.bx--progress-label) {
+  //messing up progress indicator stories
+  margin-top: 0;
 }
 
 .bx--css-grid.bx--css-grid--narrow {
