feat(TimePicker): sass module refactor (#9061)
* feat(TimePicker): sass module refactor

* test(TimePicker): add style tests

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -33,6 +33,7 @@
 @use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
+@use 'time-picker';
 @use 'toggle';
 @use 'pagination';
 @use 'select';
