--- a/packages/components/src/components/pagination-nav/_pagination-nav.scss
+++ b/packages/components/src/components/pagination-nav/_pagination-nav.scss
@@ -29,7 +29,7 @@
       display: block;
       width: 0;
       height: $carbon--spacing-02;
-      background-color: $background-brand;
+      background-color: $interactive-01;
       content: '';
       opacity: 0;
       transition: width $duration--fast-02 motion(standard, productive);
@@ -59,9 +59,9 @@
 /// @param {Number} $select-icon-top-position [$carbon--spacing-05]
 /// @param {Number} $select-icon-left-position [$carbon--spacing-05]
 @mixin pagination-nav(
-  $text-color: $text-secondary,
-  $text-color-active: $text-secondary,
-  $background-color-hover: $background-hover,
+  $text-color: $text-02,
+  $text-color-active: $text-02,
+  $background-color-hover: $hover-ui,
   $background-color-active: initial,
   $font-weight: 400,
   $item-padding: 0,
