--- a/packages/components/src/components/radio-button/_radio-button.scss
+++ b/packages/components/src/components/radio-button/_radio-button.scss
@@ -73,7 +73,7 @@
     width: rem(18px);
     height: rem(18px);
     flex-shrink: 0;
-    border: $radio-border-width solid $icon-primary;
+    border: $radio-border-width solid $icon-01;
     margin: rem(1px) $carbon--spacing-03 rem(2px) rem(2px);
     background-color: transparent;
     border-radius: 50%;
@@ -85,14 +85,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-color: $icon-primary;
+    border-color: $icon-01;
 
     &::before {
       position: relative;
       display: inline-block;
       width: 100%;
       height: 100%;
-      background-color: $icon-primary;
+      background-color: $icon-01;
       border-radius: 50%;
       content: '';
       transform: scale(0.5);
