--- a/packages/components/src/components/ui-shell/_header.scss
+++ b/packages/components/src/components/ui-shell/_header.scss
@@ -227,7 +227,7 @@
     bottom: -2px;
     left: 0;
     width: 100%;
-    border-bottom: 3px solid $support-info-inverse;
+    border-bottom: 3px solid $inverse-support-04;
     content: '';
   }
 
