fix(breakpoint): fixing calculation to have +/- 0.02 outside of map-get (#9102)
* fix(breakpoint): revert breakpoint-between removal of breakpoints map

This is reverting from the PR merge #8346, which breaks the mixin from
allowing entering any breakpoint names (sm, md, etc).

* fix(breakpoint): fixing calculation to have +/- 0.02 outside of map-get

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/layout/scss/_breakpoint.scss
+++ b/packages/layout/scss/_breakpoint.scss
@@ -198,12 +198,12 @@ $carbon--grid-breakpoints: (
   @if $min and $max {
     $min-width: if(
       not $is-number-lower and $min,
-      map-get($min, width + 0.02),
+      map-get($min, width) + 0.02,
       $min
     );
     $max-width: if(
       not $is-number-upper and $max,
-      map-get($max, width - 0.02),
+      map-get($max, width) - 0.02,
       $max
     );
     @media (min-width: $min-width) and (max-width: $max-width) {
