Revert "feat(Tokens): update color tokens pt. 2 (#8326)" (#9066)
This reverts commit e1ed612bb0b9d7f0306cd9d749698ebc4397e465.

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/loading/_loading.scss
+++ b/packages/components/src/components/loading/_loading.scss
@@ -36,7 +36,7 @@
   }
 
   .#{$prefix}--loading__stroke {
-    stroke: $interactive;
+    stroke: $interactive-04;
     stroke-dashoffset: $loading__gap;
   }
 
@@ -58,11 +58,11 @@
   }
 
   .#{$prefix}--loading--small .#{$prefix}--loading__svg {
-    stroke: $interactive;
+    stroke: $interactive-04;
   }
 
   .#{$prefix}--loading__background {
-    stroke: $layer-accent;
+    stroke: $ui-03;
     stroke-dashoffset: -22;
   }
 
@@ -86,7 +86,7 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-    background-color: $overlay;
+    background-color: $overlay-01;
     transition: background-color $duration--slow-02 motion(standard, expressive);
   }
 
