--- a/packages/components/src/components/notification/_tokens.scss
+++ b/packages/components/src/components/notification/_tokens.scss
@@ -24,11 +24,11 @@ $notification-colors: (
       ),
       (
         theme: $carbon--theme--g90,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--g100,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--v9,
@@ -49,11 +49,11 @@ $notification-colors: (
       ),
       (
         theme: $carbon--theme--g90,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--g100,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--v9,
@@ -74,11 +74,11 @@ $notification-colors: (
       ),
       (
         theme: $carbon--theme--g90,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--g100,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--v9,
@@ -99,11 +99,11 @@ $notification-colors: (
       ),
       (
         theme: $carbon--theme--g90,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--g100,
-        value: $layer,
+        value: $ui-01,
       ),
       (
         theme: $carbon--theme--v9,
@@ -124,11 +124,11 @@ $notification-colors: (
       ),
       (
         theme: $carbon--theme--g90,
-        value: $layer-hover,
+        value: $hover-ui,
       ),
       (
         theme: $carbon--theme--g100,
-        value: $layer-hover,
+        value: $hover-ui,
       ),
       (
         theme: $carbon--theme--v9,
