--- a/packages/components/src/components/inline-loading/_inline-loading.scss
+++ b/packages/components/src/components/inline-loading/_inline-loading.scss
@@ -34,7 +34,7 @@
   .#{$prefix}--inline-loading__text {
     @include type-style('label-01');
 
-    color: $text-secondary;
+    color: $text-02;
   }
 
   .#{$prefix}--inline-loading__animation {
@@ -46,7 +46,7 @@
   }
 
   .#{$prefix}--inline-loading__checkmark-container {
-    fill: $support-success;
+    fill: $support-02;
 
     // For deprecated older markup
     &.#{$prefix}--inline-loading__svg {
@@ -65,7 +65,7 @@
     animation-fill-mode: forwards;
     animation-name: stroke;
     fill: none;
-    stroke: $interactive;
+    stroke: $interactive-04;
     stroke-dasharray: 12;
     stroke-dashoffset: 12;
     stroke-width: 1.8;
@@ -75,7 +75,7 @@
   .#{$prefix}--inline-loading--error {
     width: rem(16px);
     height: rem(16px);
-    fill: $support-error;
+    fill: $support-01;
 
     &[hidden] {
       display: none;
@@ -83,7 +83,7 @@
   }
 
   .#{$prefix}--loading--small .#{$prefix}--inline-loading__svg {
-    stroke: $interactive;
+    stroke: $interactive-04;
   }
   /* If IE11 Don't show check animation */
   @media screen and (-ms-high-contrast: active),
