feat(unstable_treeview): sass refactor (#9105)
Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -35,6 +35,7 @@
 @use 'overflow-menu';
 @use 'number-input';
 @use 'time-picker';
+@use 'treeview';
 @use 'toggle';
 @use 'pagination';
 @use 'pagination-nav';
