feat(Tile): sass module refactor (#9054)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -34,6 +34,7 @@
 @use 'structured-list';
 @use 'overflow-menu';
 @use 'number-input';
+@use 'tile';
 @use 'time-picker';
 @use 'treeview';
 @use 'toggle';
