feat(themes): update module builders for new design tokens (#9128)
* chore(themes): update build script to use @babel/node

* feat(themes): update module builders for new design tokens

* chore(themes): remove commented code

* chore(project): update outdated prettierignore rule

* fix(themes): remove light and dark themes

* docs(themes): add initial docs

* feat(styles): update theme tokens that are imported

* feat(styles): add button tokens

* refactor(styles): update with new tokens and add compat tokens

* docs: run prettier

* refactor(project): update themes and storybook for carbon-react

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/.storybook/styles.scss
+++ b/packages/carbon-react/.storybook/styles.scss
@@ -14,26 +14,27 @@ $feature-flags: (
 @use "~@ibm/plex/arabic";
 
 @use '../index.scss' as styles;
+@use '../scss/components/button';
 
 // For now, including all weights for testing
 @include arabic.all;
 @include sans.all;
 @include mono.all;
 
-body {
-  @include styles.theme();
+:root {
+  @include styles.theme(styles.$white, button.$white);
 }
 
 [data-carbon-theme='g10'] {
-  @include styles.theme(styles.$g10);
+  @include styles.theme(styles.$g10, button.$g10);
 }
 
 [data-carbon-theme='g90'] {
-  @include styles.theme(styles.$g90);
+  @include styles.theme(styles.$g90, button.$g90);
 }
 
 [data-carbon-theme='g100'] {
-  @include styles.theme(styles.$g100);
+  @include styles.theme(styles.$g100, button.$g100);
 }
 
 html[lang='en'] body {
