--- a/packages/styles/scss/components/button/_button.scss
+++ b/packages/styles/scss/components/button/_button.scss
@@ -17,6 +17,7 @@
 @use '../../utilities/skeleton' as *;
 @use '../../utilities/tooltip' as *;
 @use '../../utilities/visually-hidden' as *;
+@use 'tokens' as *;
 
 @mixin button {
   .#{$prefix}--btn {
