--- a/packages/styles/scss/_theme.scss
+++ b/packages/styles/scss/_theme.scss
@@ -5,152 +5,48 @@
 // LICENSE file in the root directory of this source tree.
 //
 
+@use './config' as *;
+@use '@carbon/themes/scss/modules/config' with (
+  $prefix: $prefix,
+);
+@use '@carbon/themes/scss/modules/tokens';
 @forward '@carbon/themes/scss/modules/theme';
-@forward '@carbon/themes/scss/modules/tokens'
-show
-  $interactive-01,
-  $interactive-02,
-  $interactive-03,
-  $interactive-04,
-  $ui-background,
-  $ui-01,
-  $ui-02,
-  $ui-03,
-  $ui-04,
-  $ui-05,
-  $text-01,
-  $text-02,
-  $text-03,
-  $text-04,
-  $text-05,
-  $text-error,
-  $icon-01,
-  $icon-02,
-  $icon-03,
-  $link-01,
-  $link-02,
-  $inverse-link,
-  $field-01,
-  $field-02,
-  $inverse-01,
-  $inverse-02,
-  $support-01,
-  $support-02,
-  $support-03,
-  $support-04,
-  $inverse-support-01,
-  $inverse-support-02,
-  $inverse-support-03,
-  $inverse-support-04,
-  $overlay-01,
-  $danger-01,
-  $danger-02,
-  $focus,
-  $inverse-focus-ui,
-  $hover-primary,
-  $active-primary,
-  $hover-primary-text,
-  $hover-secondary,
-  $active-secondary,
-  $hover-tertiary,
-  $active-tertiary,
-  $hover-ui,
-  $hover-light-ui,
-  $hover-selected-ui,
-  $active-ui,
-  $active-light-ui,
-  $selected-ui,
-  $selected-light-ui,
-  $inverse-hover-ui,
-  $hover-danger,
-  $active-danger,
-  $hover-row,
-  $visited-link,
-  $disabled-01,
-  $disabled-02,
-  $disabled-03,
-  $highlight,
-  $decorative-01,
-  $button-separator,
-  $skeleton-01,
-  $skeleton-02,
-  $background,
-  $layer,
-  $layer-accent,
-  $field,
-  $background-inverse,
-  $background-brand,
-  $interactive,
-  $border-subtle,
-  $border-strong,
-  $border-inverse,
-  $border-interactive,
-  $text-primary,
-  $text-secondary,
-  $text-placeholder,
-  $text-helper,
-  $text-on-color,
-  $text-inverse,
-  $link-primary,
-  $link-secondary,
-  $link-visited,
-  $link-inverse,
-  $icon-primary,
-  $icon-secondary,
-  $icon-on-color,
-  $icon-inverse,
-  $support-error,
-  $support-success,
-  $support-warning,
-  $support-info,
-  $support-error-inverse,
-  $support-success-inverse,
-  $support-warning-inverse,
-  $support-info-inverse,
-  $overlay,
-  $toggle-off,
-  $button-primary,
-  $button-secondary,
-  $button-tertiary,
-  $button-danger-primary,
-  $button-danger-secondary,
-  $background-active,
-  $layer-active,
-  $button-danger-active,
-  $button-primary-active,
-  $button-secondary-active,
-  $button-tertiary-active,
-  $focus-inset,
-  $focus-inverse,
-  $background-hover,
-  $layer-hover,
-  $field-hover,
-  $background-inverse-hover,
-  $link-primary-hover,
-  $button-danger-hover,
-  $button-primary-hover,
-  $button-secondary-hover,
-  $button-tertiary-hover,
-  $background-selected,
-  $background-selected-hover,
-  $layer-selected,
-  $layer-selected-hover,
-  $layer-selected-inverse,
-  $border-subtle-selected,
-  $layer-disabled,
-  $field-disabled,
-  $border-disabled,
-  $text-disabled,
-  $button-disabled,
-  $icon-disabled,
-  $text-on-color-disabled,
-  $icon-on-color-disabled,
-  $layer-selected-disabled,
-  $skeleton-background,
-  $skeleton-element,
-  $brand-01,
-  $brand-02,
-  $brand-03,
-  $active-01,
-  $hover-field,
-  $danger;
+@forward '@carbon/themes/scss/modules/tokens';
+
+// TODO: add contextual tokens
+$border-subtle: tokens.$border-subtle-01;
+$border-strong: tokens.$border-strong-01;
+
+$layer: tokens.$layer-01;
+$layer-active: tokens.$layer-active-01;
+$layer-hover: tokens.$layer-hover-01;
+$layer-accent: tokens.$layer-accent-01;
+$layer-selected: tokens.$layer-selected-01;
+$layer-selected-hover: tokens.$layer-selected-hover-01;
+
+$field: tokens.$field-01;
+$field-hover: tokens.$field-hover-01;
+
+// TODO remove
+$interactive-01: #0f62fe;
+$interactive-04: #0f62fe;
+$decorative-01: #e0e0e0;
+$hover-row: #636363;
+$ui-01: #f4f4f4;
+$ui-02: #ffffff;
+$ui-05: #161616;
+$disabled-01: #f4f4f4;
+$disabled-02: #c6c6c6;
+$hover-field: #e5e5e5;
+$hover-ui: #e5e5e5;
+$selected-ui: #e0e0e0;
+$hover-selected-ui: #cacaca;
+$hover-light-ui: #e5e5e5;
+$active-light-ui: #c6c6c6;
+$text-01: #161616;
+$text-02: #525252;
+$text-04: #ffffff;
+$text-05: #6f6f6f;
+$icon-01: #f4f4f4;
+$icon-02: #525252;
+$link-01: #0f62fe;
