--- a/packages/styles/scss/utilities/_custom-property.scss
+++ b/packages/styles/scss/utilities/_custom-property.scss
@@ -35,6 +35,17 @@
   @return --#{config.$prefix}-#{$name};
 }
 
+/// Get the var() representation for a given token
+/// @param {String} $name
+/// @param {Any} $fallback
+/// @returns var()
+@function get-var($name, $fallback: false) {
+  @if $fallback {
+    @return var(--#{config.$prefix}-#{$name}, #{$fallback});
+  }
+  @return var(--#{config.$prefix}-#{$name});
+}
+
 /// Emit a declaration which sets the value of a CSS Custom Property using the
 /// $name as the <custom-property-name> and the $value as the
 /// <declaration-value>
