--- a/packages/themes/scss/modules/_config.scss
+++ b/packages/themes/scss/modules/_config.scss
@@ -5,5 +5,4 @@
 // LICENSE file in the root directory of this source tree.
 //
 
-@forward 'generated/themes';
-@use 'generated/themes';
+$prefix: 'cds' !default;
