--- a/packages/components/src/components/list-box/_list-box.scss
+++ b/packages/components/src/components/list-box/_list-box.scss
@@ -701,8 +701,8 @@ $list-box-menu-width: rem(300px);
 
   .#{$prefix}--list-box__menu-item--active:hover,
   .#{$prefix}--list-box__menu-item--active.#{$prefix}--list-box__menu-item--highlighted {
-    border-bottom-color: $selected-ui;
-    background-color: $selected-ui;
+    border-bottom-color: $hover-selected-ui;
+    background-color: $hover-selected-ui;
   }
 
   .#{$prefix}--list-box__menu-item--active
