--- a/packages/styles/scss/_theme.scss
+++ b/packages/styles/scss/_theme.scss
@@ -12,20 +12,93 @@
 @use '@carbon/themes/scss/modules/tokens';
 @forward '@carbon/themes/scss/modules/theme';
 @forward '@carbon/themes/scss/modules/tokens';
+@use './utilities/custom-property';
+@use './utilities/layer-set' with (
+  $layer-sets: (
+    layer: (
+      tokens.$layer-01,
+      tokens.$layer-02,
+      tokens.$layer-03,
+    ),
+    layer-active: (
+      tokens.$layer-active-01,
+      tokens.$layer-active-02,
+      tokens.$layer-active-03,
+    ),
+    layer-hover: (
+      tokens.$layer-hover-01,
+      tokens.$layer-hover-02,
+      tokens.$layer-hover-03,
+    ),
+    layer-selected: (
+      tokens.$layer-selected-01,
+      tokens.$layer-selected-02,
+      tokens.$layer-selected-03,
+    ),
+    layer-selected-hover: (
+      tokens.$layer-selected-hover-01,
+      tokens.$layer-selected-hover-02,
+      tokens.$layer-selected-hover-03,
+    ),
+    layer-accent: (
+      tokens.$layer-accent-01,
+      tokens.$layer-accent-02,
+      tokens.$layer-accent-03,
+    ),
+    layer-accent-hover: (
+      tokens.$layer-accent-hover-01,
+      tokens.$layer-accent-hover-02,
+      tokens.$layer-accent-hover-03,
+    ),
+    layer-accent-active: (
+      tokens.$layer-accent-active-01,
+      tokens.$layer-accent-active-02,
+      tokens.$layer-accent-active-03,
+    ),
+    field: (
+      tokens.$field-01,
+      tokens.$field-02,
+      tokens.$field-03,
+    ),
+    field-hover: (
+      tokens.$field-hover-01,
+      tokens.$field-hover-02,
+      tokens.$field-hover-03,
+    ),
+    border-subtle: (
+      tokens.$border-subtle-01,
+      tokens.$border-subtle-02,
+      tokens.$border-subtle-03,
+    ),
+    border-subtle-selected: (
+      tokens.$border-subtle-selected-01,
+      tokens.$border-subtle-selected-02,
+      tokens.$border-subtle-selected-03,
+    ),
+    border-strong: (
+      tokens.$border-strong-01,
+      tokens.$border-strong-02,
+      tokens.$border-strong-03,
+    ),
+  ),
+);
 
-// TODO: add contextual tokens
-$border-subtle: tokens.$border-subtle-01;
-$border-strong: tokens.$border-strong-01;
+// Layer sets
+$layer: custom-property.get-var('layer');
+$layer-active: custom-property.get-var('layer-active');
+$layer-hover: custom-property.get-var('layer-hover');
+$layer-selected: custom-property.get-var('layer-selected');
+$layer-selected-hover: custom-property.get-var('layer-selected-hover');
+$layer-accent: custom-property.get-var('layer-accent');
+$layer-accent-hover: custom-property.get-var('layer-accent-hover');
+$layer-accent-active: custom-property.get-var('layer-accent-active');
 
-$layer: tokens.$layer-01;
-$layer-active: tokens.$layer-active-01;
-$layer-hover: tokens.$layer-hover-01;
-$layer-accent: tokens.$layer-accent-01;
-$layer-selected: tokens.$layer-selected-01;
-$layer-selected-hover: tokens.$layer-selected-hover-01;
+$field: custom-property.get-var('field');
+$field-hover: custom-property.get-var('field-hover');
 
-$field: tokens.$field-01;
-$field-hover: tokens.$field-hover-01;
+$border-subtle: custom-property.get-var('border-subtle');
+$border-subtle-selected: custom-property.get-var('border-subtle-selected');
+$border-strong: custom-property.get-var('border-strong');
 
 // TODO remove
 $interactive-01: #0f62fe;
