feat(Tag): add Tag to @carbon/styles (#9131)
* feat(Tag): add Tag to @carbon/styles

* feat(Tag): add Tag to @carbon/styles

* feat(Tag): add tag sass module

* feat(Tag): add tag sass module

* feat(Tag): fix broken color token imports

* feat(Tag): add type includes

* fix(Tag): remove debug, meta calls; pr fixes

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/carbon-react/.storybook/styles.scss
+++ b/packages/carbon-react/.storybook/styles.scss
@@ -15,6 +15,7 @@ $feature-flags: (
 
 @use '../index.scss' as styles;
 @use '../scss/components/button';
+@use '../scss/components/tag';
 
 // For now, including all weights for testing
 @include arabic.all;
@@ -22,19 +23,19 @@ $feature-flags: (
 @include mono.all;
 
 :root {
-  @include styles.theme(styles.$white, button.$white);
+  @include styles.theme(styles.$white, button.$white, tag.$white);
 }
 
 [data-carbon-theme='g10'] {
-  @include styles.theme(styles.$g10, button.$g10);
+  @include styles.theme(styles.$g10, button.$g10, tag.$g10);
 }
 
 [data-carbon-theme='g90'] {
-  @include styles.theme(styles.$g90, button.$g90);
+  @include styles.theme(styles.$g90, button.$g90, tag.$g90);
 }
 
 [data-carbon-theme='g100'] {
-  @include styles.theme(styles.$g100, button.$g100);
+  @include styles.theme(styles.$g100, button.$g100, tag.$g100);
 }
 
 html[lang='en'] body {
