--- a/packages/styles/scss/components/_index.scss
+++ b/packages/styles/scss/components/_index.scss
@@ -45,3 +45,7 @@
 @use 'progress-indicator';
 @use 'tabs';
 @use 'ui-shell';
+@use 'list-box';
+@use 'combo-box';
+@use 'dropdown';
+@use 'multiselect';
